--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
 
         <section>
-            <h2></h2>
+            <h2>Our advantages</h2>
             <ul>
                 <li>
                     <h3>Strategy</h3>
