--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <header>
         <nav>
-            <a href="./index.html"><span>WEB</span>STUDIO</a>
+            <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li>
                     <a href="">Studio</a>
@@ -69,22 +69,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/img.jpg" alt="" width="264" height="260">
+                    <img src="./images/img.jpg" alt="a man with a beard" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/img1.jpg" alt="" width="264" height="260">
+                    <img src="./images/img1.jpg" alt="the man smiles" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/img2.jpg" alt="" width="264" height="260">
+                    <img src="./images/img2.jpg" alt="a girl with long hair" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/img3.jpg" alt="" width="264" height="260">
+                    <img src="./images/img3.jpg" alt="a man in a t-shirt" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -94,7 +94,7 @@
     </main>
 
     <footer>
-        <a href="./index.html"><span>WEB</span>STUDIO</a>
+        <a href="./index.html">WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
