--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="./index.html">WEBSTUDIO</a>
             <ul>
                 <li>
-                    <a href="">Studio</a>
+                    <a href="#">Studio</a>
                 </li>
                 <li>
                     <a href="">Portfolio</a>
